--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id=image_drop_zone>
     <div id=default_image_area>
     <button id=trigger_image_input_picker>Choose an image</button>
-    Or use the default one:<br>
+    Or use this one:<br>
     <input
     hidden
     type=file
@@ -47,9 +47,7 @@
 </field>
   <button id=save_button>Combine + Save</button>
   <!--  "<span class=output_name_sync></span>" -->
-  <p>(Re)name the saved file to end:<br>
-    - ".<b id=current_img_ext>png</b>" to show the image file.<br>
-    - ".<b>zip</b>" to show the zip file.</p>
+  <p>The polyglot file hides or shows the zip or the image based on whether its name has extension ".<b id=current_img_ext>png</b>" or "<b>.zip</b>"</p>
     <p>"Archive Utility.app" on Mac fails to unzip the file produced.<br>Try other unarchiver applications.</p>
 </div><!--end column-->
 </main>
