--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </field>
   <button id=save_button>Combine + Save</button>
   <!--  "<span class=output_name_sync></span>" -->
-  <p>The polyglot file hides or shows the zip or the image based on whether its name has the extension ".<b id=current_img_ext>png</b>" or "<b>.zip</b>"</p>
+  <p>The polyglot file hides or shows the zip or the image based on whether its name has the extension ".<b id=current_img_ext>png</b>" or "<b>.zip</b>".</p>
     <p>"Archive Utility.app" on Mac fails to unzip the file produced.<br>Try other unarchiver applications.</p>
 </div><!--end column-->
 </main>
