--- a/changelog.html
+++ b/changelog.html
@@ -18,7 +18,7 @@ a {
   box-sizing: border-box;
 }
 body {
-  width: 100vw;
+  width: 100dvw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -45,15 +45,36 @@ main {
   flex:1;
   overflow-y:auto;
   display: flex;
+  width: 64ch;
+  max-width: calc(100dvw - 2ch);
+  margin: 0 auto;
 }
 pre {
+  white-space: pre-wrap;
+  word-break: break-all;
   margin: 0 auto;
 }
 </style>
-<title>Smoosh Changelog</title></head><body>
-<header><a href="index.html">Smoosh</a> CHANGE LOG</header>
+<title>Stog Changelog</title></head><body>
+<header><a href="index.html">Stog</a> CHANGE LOG</header>
 <main><!--Sorting: Dates, new at top. Changes, first at top-->
 <pre>
+2025_0331
+- Extracts image and zip from polyglot files user loads.
+- Offers user to save a zip file found in a loaded image.
+- Documents how to extract zip from polyglot using the tool.
+- Adds tooltips with more details to some elements.
+- Renames tool to 'Stog'. <!--STeganOGraphy-->
+- Adds window wide drag and drop for zips and images.
+- Allows dragging a zip and an image at the same time.
+- Picks first zip if user drags many.
+- Picks first image if user drags many.
+- Ignores other file types dragged.
+- Lets user name any custom .txt file they choose to make.
+
+2025_0318
+- Adds notice for 'no script' users.
+
 2025_0227
 - Changes default to transparent smiley face.
 - SITE:
@@ -83,5 +104,5 @@ pre {
 - Combines existing zip and JPG.
 - Uses default image if none given.<br>
 </pre></main><footer>
-<a href="index.html">Smoosh</a> By + &copy; 2025 <a href=https://gregabbott.pages.dev>Greg Abbott</a>
+<a href="index.html">Stog</a> By + &copy; 2025 <a href=https://gregabbott.pages.dev>Greg Abbott</a>
 </footer></body></html>
