--- a/changelog.html
+++ b/changelog.html
@@ -59,6 +59,9 @@ pre {
 <header><a href="index.html">Stog</a> CHANGE LOG</header>
 <main><!--Sorting: Dates, new at top. Changes, first at top-->
 <pre>
+2025_0404
+- Reworks drag drop for Safari compatibility.
+
 2025_0331
 - Extracts image and zip from polyglot files user loads.
 - Offers user to save a zip file found in a loaded image.
